--- a/tmm-desktop/src/main/resources/messages.properties
+++ b/tmm-desktop/src/main/resources/messages.properties
@@ -10,3 +10,5 @@ Message.mechanism.is.not.saved=Mechanism is not saved. Would you like to save it
 Message.mechanism.saving=Saving mechanism
 Message.mechanism.saving.as=Saving mechanism as
 Message.mechanism.opening=Opening mechanism
+
+MainFrame.Commands.start.stop=Start / stop
