--- a/tmm-desktop/src/main/resources/messages_ru_RU.properties
+++ b/tmm-desktop/src/main/resources/messages_ru_RU.properties
@@ -10,3 +10,5 @@ Message.mechanism.is.not.saved=\u0422\u0435\u043a\u0443\u0449\u0438\u0439 \u043c
 Message.mechanism.saving=\u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0435 \u043c\u0435\u0445\u0430\u043d\u0438\u0437\u043c\u0430
 Message.mechanism.saving.as=\u0421\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0435 \u043c\u0435\u0445\u0430\u043d\u0438\u0437\u043c\u0430 \u043a\u0430\u043a
 Message.mechanism.opening=\u041e\u0442\u043a\u0440\u044b\u0442\u0438\u0435 \u043c\u0435\u0445\u0430\u043d\u0438\u0437\u043c\u0430
+
+MainFrame.Commands.start.stop=\u041f\u0443\u0441\u043a / \u0441\u0442\u043e\u043f
